Added plugins.min.js to layout.jade

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,10 +2,11 @@ doctype html
 html
   head
     title Title
-    
+
     block styles
 
   body
     block content
 
+    script(type='text/javascript', src='/js/plugins.min.js')
     block scripts
