--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,9 @@ html
   head
     title Title
 
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+
+    link(rel='stylesheet', type='text/css', href='/cdn/css/plugins.min.css')
     block styles
 
   body
