--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
 
     meta(name='viewport', content='width=device-width, initial-scale=1')
 
-    link(rel='stylesheet', type='text/css', href='/cdn/css/plugins.min.css')
+    link(rel='stylesheet', type='text/css', href='/css/plugins.min.css')
     block styles
 
   body
