--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
 
     link(rel='stylesheet', type='text/css', href='/css/plugins.min.css')
+    link(rel='stylesheet', type='text/css', href='/css/style.min.css')
     block styles
 
   body
